@@ -32,7 +32,6 @@ ideas for future versions:
   [?] A "contains" relationship towards features shall not influence the grid-layouting.
       check data_visible_set.c data_visible_set_private_update_containment_cache()
   [ ] allow arbitrary compartment sequences for features, e.g. tag - operation - property
-  [ ] stereotype images of packages are positioned unluckily
   @io
   [ ] export formats: enhance xmi standard compliance
   [ ] xmi export is not spec-compliant for uml:Port, provided and required Interfaces
