@@ -2,6 +2,7 @@ crystal-facet-uml (1.62.1) UNRELEASED; urgency=medium
 
   [ Andreas Warnke ]
   * All new(!) files are of type json - no native sqlite3 format anymore
+  * Stereotype icons of non-empty packages are positioned next to the label
 
  -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 22 Dec 2024 18:00:00 +0100
 
